fix formatting/spacing within the styless.css document

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,6 @@
   display: none;
 }
 
-/* #survey-complete {
-  display: none;
-} */
-
 div.custom-col2, .page-footer {
   padding: 15px;
   background: linear-gradient(to top right, #5143e8, #9387ff);
